--- a/abadi1.html
+++ b/abadi1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +18,7 @@
   .container {
     background-color: #ffffff;
     padding: 20px;
-    width: 340px;
+    width: 320px;
     margin: 20px auto;
     position: relative;
   }
@@ -58,17 +59,17 @@
 <div class="container">
   <img class="logo" src="mudah1.jpg" alt="Logo">
   <div class="transfer-info">
-    <p><strong>Jumlah:</strong> Rp. 500.000</p>
+    <p><strong>Jumlah:</strong> Rp.2.200.000</p>
     <p><strong>Siklus Pinjaman (Hari):</strong> 7 Hari</p>
-    <p><strong>Pembayaran Kembali :</strong> Rp.500.000</p>
+    <p><strong>Pembayaran Kembali :</strong> Rp.2.200.000</p>
     <p><strong>Dalam Pengembalian :</strong> Belum Lunas</p>
   </div>
   <div class="proof">
     <img class="proof-logo" src="bri.png" alt="Logo">
     <p>Rekening Pembayaran Anda</p>
     <p> BANK RAKYAT INDONESIA</p>
-    <p>No REK 105082310984003</p>
-    <p>Atas Nama NUR DESI SUSANTI</p>
+    <p>No REK 10352082258561914</p>
+    <p>Atas Nama<br>PT ODEO TEKNOLOGI INDONESIA</p>
   </div>
 </div>
 </body>
