--- a/pinjaman.html
+++ b/pinjaman.html
@@ -115,7 +115,7 @@
         <div class="actions">
             <button class="btn-extend">Saya Ingin Perpanjang</button>
             <!-- Form untuk submit ke halaman pelunasan 2 -->
-            <form action="abadi1.html" method="POST">
+            <form action="abadi.php" method="POST">
                 <button type="submit" class="btn-pay">Saya Ingin Melunasi</button>
             </form>
         </div>
