--- a/pinjaman.html
+++ b/pinjaman.html
@@ -59,11 +59,11 @@
             margin-top: 10px;
         }
 
-        .actions button {
+        .actions a {
             padding: 10px;
-            border: none;
             border-radius: 5px;
             cursor: pointer;
+            text-decoration: none;
         }
 
         .btn-extend {
@@ -92,11 +92,8 @@
             <p>Batas Tanggal Pelunasan <span>2024-10-07</span></p>
         </div>
         <div class="actions">
-            <button class="btn-extend">Saya Ingin Perpanjang</button>
-            <!-- Form untuk submit ke halaman pelunasan 1 -->
-            <form action="abadi1.html" method="POST">
-                <button type="submit" class="btn-pay">Saya Ingin Melunasi</button>
-            </form>
+            <a href="#" class="btn-extend">Saya Ingin Perpanjang</a>
+            <a href="abadi1.html" class="btn-pay">Melunasi</a>
         </div>
     </div>
 
@@ -113,11 +110,8 @@
             <p>Batas Tanggal Pelunasan <span>2024-10-07</span></p>
         </div>
         <div class="actions">
-            <button class="btn-extend">Saya Ingin Perpanjang</button>
-            <!-- Form untuk submit ke halaman pelunasan 2 -->
-            <form action="abadi.php" method="POST">
-                <button type="submit" class="btn-pay">Saya Ingin Melunasi</button>
-            </form>
+            <a href="#" class="btn-extend">Saya Ingin Perpanjang</a>
+            <a href="abadi1.html" class="btn-pay">Melunasi</a>
         </div>
     </div>
 
