--- a/abadi1.html
+++ b/abadi1.html
@@ -57,7 +57,7 @@
 </head>
 <body>
 <div class="container">
-  <img class="logo" src="mudah1.jpg" alt="Logo">
+  <img class="logo" src="logo1.png" alt="Logo">
   <div class="transfer-info">
     <p><strong>Jumlah:</strong> Rp.2.200.000</p>
     <p><strong>Siklus Pinjaman (Hari):</strong> 7 Hari</p>
