--- a/puki.html
+++ b/puki.html
@@ -61,7 +61,7 @@
         <!-- Navigasi di bagian bawah -->
         <div class="nav">
             <!-- Link 1 dengan ikon ke home.html -->
-            <a href="pak.html">
+            <a href="puki.html">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhJTi4tF25WyKywVda2R2c8cQMP--V4QPrfzXncEwh1PbgiYeqnT7G-8LKLzvtz6RPpCSQbda5uqo3Ln5OUXH1qGrbvOk1DXjIdQXkZCaSDByzqpGIO-lRR4masGxPGXuq0ks22b1BfNLPycocFDjy1NIiPm4iO8vfBzplfBPZ5r5J3UqgGnTKhYTaYNGj0" alt="Home Icon"/>
                 <div></div>
             </a>
