--- a/bank.html
+++ b/bank.html
@@ -15,7 +15,7 @@
 
         /* Latar belakang gambar dengan penyesuaian */
         .background {
-            background-image: url('bank.jpg'); /* Ganti URL ini dengan gambar latar belakang Anda */
+            background-image: url('gantibank.jpg'); /* Ganti URL ini dengan gambar latar belakang Anda */
             background-size: cover;
             background-position: center;
             position: relative;
