--- a/akun.html
+++ b/akun.html
@@ -130,7 +130,7 @@ body {
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhCuPN9D05lmMXW7eQD2QBeMf38lm_ZgCDYIgyr43yGkx_3ZKgm_wp_gFeMmm0oQWxk7GrGoYt-vN210oX5KtivYIH9h6VOYUbjBDUoBJzgOJDh4EZQ2IVBi0v9S16jKKX7rGF4RMr50NvjGdzXfymKzQTpKq1zfenq7xTOc_yiHYHfWNFvN5GQ2SGN6p_9" alt="Dana Amanah Logo">
             </div>
             <div class="phone-number">
-                <p></p>
+                <p>081361064338</p>
             </div>
         </div>
 
@@ -163,7 +163,7 @@ body {
     </div>
     <div class="nav">
             <!-- Link 1 dengan ikon -->
-            <a href="pak.html">
+            <a href="puki.html">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhJTi4tF25WyKywVda2R2c8cQMP--V4QPrfzXncEwh1PbgiYeqnT7G-8LKLzvtz6RPpCSQbda5uqo3Ln5OUXH1qGrbvOk1DXjIdQXkZCaSDByzqpGIO-lRR4masGxPGXuq0ks22b1BfNLPycocFDjy1NIiPm4iO8vfBzplfBPZ5r5J3UqgGnTKhYTaYNGj0" alt="Rek Icon"/>
             </a>
             <!-- Link 2 dengan ikon di tengah -->
