--- a/pinjaman.html
+++ b/pinjaman.html
@@ -85,13 +85,28 @@
         <div class="status">Belum Lunas</div>
         <div class="loan-details">
             <p>No Pinjaman <span>20241001182032UyYh</span></p>
-            <p>Jumlah Pinjaman <span>Rp 1.125.000</span></p>
+            <p>Jumlah Pinjaman <span>Rp 1.176.000</span></p>
             <p>Tenor Pinjaman <span>7 Hari</span></p>
-            <p>Jumlah Yang harus dilunasi <span>Rp 1.800.000</span></p>
+            <p>Jumlah Yang harus dilunasi <span>Rp 2.100.000</span></p>
         </div>
         <div class="actions">
             <a href="#" class="btn-extend">Saya Ingin Perpanjang</a>
             <a href="abadi1.html" class="btn-pay">Melunasi</a>
+        </div>
+    </div>
+    
+        <div class="loan-card">
+        <img src="logo2.png" alt="Dana Flow Logo">
+        <div class="status">Belum Lunas</div>
+        <div class="loan-details">
+            <p>No Pinjaman <span>20261001182032UdBh</span></p>
+            <p>Jumlah Pinjaman <span>Rp 1.176.000</span></p>
+            <p>Tenor Pinjaman <span>7 Hari</span></p>
+            <p>Jumlah Yang harus dilunasi <span>Rp 2.100.000</span></p>
+        </div>
+        <div class="actions">
+            <a href="#" class="btn-extend">Saya Ingin Perpanjang</a>
+            <a href="abadi2.html" class="btn-pay">Melunasi</a>
         </div>
     </div>
 
