--- a/bri.html
+++ b/bri.html
@@ -163,8 +163,8 @@
     <div class="info-box">
         <h2>Informasi Pemesanan</h2>
         <div>
-            <span>Nomor Pinjaman</span>
-            <span>20241001182032UyYh</span>
+            <span>Status Pinjaman</span>
+            <span>Belum Lunas</span>
         </div>
         <div>
             <span>Jumlah Pelunasan</span>
