--- a/pinjaman.html
+++ b/pinjaman.html
@@ -91,7 +91,7 @@
         </div>
         <div class="actions">
             <a href="#" class="btn-extend">Saya Ingin Perpanjang</a>
-            <a href="abadi1.html" class="btn-pay">Melunasi</a>
+            <a href="metode.html" class="btn-pay">Melunasi</a>
         </div>
     </div>
     
@@ -106,7 +106,7 @@
         </div>
         <div class="actions">
             <a href="#" class="btn-extend">Saya Ingin Perpanjang</a>
-            <a href="abadi2.html" class="btn-pay">Melunasi</a>
+            <a href="metode.html" class="btn-pay">Melunasi</a>
         </div>
     </div>
 
