--- a/akun.html
+++ b/akun.html
@@ -130,7 +130,7 @@ body {
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhCuPN9D05lmMXW7eQD2QBeMf38lm_ZgCDYIgyr43yGkx_3ZKgm_wp_gFeMmm0oQWxk7GrGoYt-vN210oX5KtivYIH9h6VOYUbjBDUoBJzgOJDh4EZQ2IVBi0v9S16jKKX7rGF4RMr50NvjGdzXfymKzQTpKq1zfenq7xTOc_yiHYHfWNFvN5GQ2SGN6p_9" alt="Dana Amanah Logo">
             </div>
             <div class="phone-number">
-                <p>081361064338</p>
+                <p>SRI WAHONO</p>
             </div>
         </div>
 
