--- a/akun.html
+++ b/akun.html
@@ -135,7 +135,7 @@ body {
         </div>
 
         <div class="menu">
-            <a href="tentang.html" class="menu-item">
+            <a href="bank.html" class="menu-item">
                 <div class="menu-icon">
                     <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhZVl5GMy7sYNUWm4FBCZcQf1P1vCQprkw_l2EVPYYm7OD0-6ljiR8NuKHiVpriaicPCTTVq1jw5DMOAfpaFfzln9RObv1Wp4BBlsj1Ds9J0Ft3ApJYY2-Ymwwha7thtY4Z88Fmxgw3yKAN9IVk2703RHcSk4I_DRjSto1IbvYp-XNgoZQ_nGHiGgx1W7SD" alt="Rek">
                 </div>
