--- a/metode.html
+++ b/metode.html
@@ -119,14 +119,11 @@
         <!-- Daftar Bank -->
         <ul class="bank-list">
 
-            <li class="bank-item" onclick="window.location.href='mandiri.html'">
+            <li class="bank-item" onclick="window.location.href='bri12.html'">
                 <span>Bank BRI</span>
                 <span class="arrow">></span>
             </li>
-            <li class="bank-item" onclick="window.location.href='inaperdana.html'">
-                <span>Bank Ina Perdana</span>
-                <span class="arrow">></span>
-            </li>
+            
         </ul>
     </div>
 
