--- a/pak.html
+++ b/pak.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
         }
         body {
-            background-color: rgb(0, 0, 0);
+            background-color: #ffffff;
 
         .otp-container {
             display: flex;
@@ -56,7 +56,7 @@
 
         .otp-input .timer {
             font-size: 14px;
-            color: #ffffff;
+            color: #000000;
             white-space: nowrap;
             padding-left: -10%;
             font-weight: bold;
@@ -76,7 +76,7 @@
         }
 
         .submit-btn.enabled {
-            background-color: #ffa500;
+            background-color: #66CDAA;
             cursor: pointer;
         }
 
@@ -108,7 +108,7 @@
 <body>
   
   <div class="gambar">
-        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEja4ISYCf68xC6RE9Z-GP4hB7IM_QaSfY5D7nHhwo2jb3qKg1vD0sqXm32JE5C_tYGHjyiAksbga7Z3QFsaRThfVAHyuBswlVNDBxlE1o9RyaHBoECN-V0znlWxHnK4qLJOt5Lz6pQXZj89Pq73owh_sejE6MIpsE6spoXqCrRtKaoT79-I79BtSPKWBEc4" alt="Gambar Pucok">
+        <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729929130350-removebg-preview.png" alt="Gambar Pucok">
     </div>
 
 <div class="otp-container">
@@ -121,7 +121,7 @@
 </div>
 
 <div class="gambar gambar-bawah">
-        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEiT-LGlat2eeRbp5y0cecYi-h2CZb8EbpzPZLwXuwqOjpkFEPwmOiZ-pB6xRmPjQ8IaYn30jzOaFdLr229N-ndWkkmyxGd9Hw9NnNtyP__vAxdYVwUoZzWvU0UOg1tzGF89ZFhQk3o2N_hh6SL-ztb0fkf1B6C3iQRRIXQTKQInp3vneGjPPXRvj5-D_Gj0" alt="Logo LPS">
+        <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729930025107-removebg-preview.png" alt="Logo LPS">
     </div>
 <script>
     let timeLeft = 120;
@@ -189,4 +189,4 @@
 </script>
 
 </body>
-  </html>
+</html>
