--- a/puki.html
+++ b/puki.html
@@ -15,7 +15,7 @@
 
         /* Latar belakang gambar dengan penyesuaian */
         .background {
-            background-image: url('https://blogger.googleusercontent.com/img/a/AVvXsEhLMX056_L4D_4oY8dZa1Knvz50aQs5Ol8von0qlbNd20Sc1NeDtZYHfwMa_SJaLrdCnm1GjIW91F0r0ImsvsNg7qXEoOYq_bj6gSESRaz1oMcSfG7liNNeCaAVCW4K8whtYpbBs_GOpW_oIfir_rdoH0ro0K2DLZutCEVoTrp7aEWmmSG71fPjA2eFnf4c'); /* Ganti URL ini dengan gambar latar belakang Anda */
+            background-image: url('https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729930809159.jpg'); /* Ganti URL ini dengan gambar latar belakang Anda */
             background-size: cover;
             background-position: center;
             position: relative;
