--- a/akun.html
+++ b/akun.html
@@ -14,7 +14,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #0d0d0d;
+    background-color: #ffffff;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -24,7 +24,7 @@ body {
 
 .container {
     width: 360px;
-    background-color: #1a1a1a;
+    background-color: #ffffff;
     border-radius: 8px;
     padding: 20px;
     margin-top:-77%;
@@ -52,8 +52,8 @@ body {
 }
 
 .menu-item {
-    background-color: #333;
-    color: #fff;
+    background-color: #66CDAA;
+    color: #000;
     padding: 15px;
     border-radius: 5px;
     display: flex;
@@ -89,7 +89,7 @@ body {
 
         /* Gaya untuk ikon di dalam nav */
         .nav a {
-            color: #fff;
+            color: #000;
             text-decoration: none;
             font-size: 10px;
             text-align: center;
@@ -127,7 +127,7 @@ body {
         
         <div class="header">
             <div class="logo">
-                <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhCuPN9D05lmMXW7eQD2QBeMf38lm_ZgCDYIgyr43yGkx_3ZKgm_wp_gFeMmm0oQWxk7GrGoYt-vN210oX5KtivYIH9h6VOYUbjBDUoBJzgOJDh4EZQ2IVBi0v9S16jKKX7rGF4RMr50NvjGdzXfymKzQTpKq1zfenq7xTOc_yiHYHfWNFvN5GQ2SGN6p_9" alt="Dana Amanah Logo">
+                <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729931263416-removebg-preview.png" alt="Dana Amanah Logo">
             </div>
             <div class="phone-number">
                 <p>SRI WAHONO</p>
