--- a/bank.html
+++ b/bank.html
@@ -18,7 +18,7 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            font-size: 20px;
+            font-size: 15px;
             font-weight: bold;
             color: #333;
             text-decoration: none;
@@ -32,7 +32,7 @@
 
         /* Elemen Box Hijau */
         .green-box {
-            background-color: #4CAF50;
+            background-color: #66CDAA;
             color: white;
             padding: 20px;
             font-size: 24px;
@@ -65,9 +65,9 @@
 
     
     <div class="green-box">
-        BANK BNI<br><br>
-        <h1>No Rekening<br></h1>
-        <h2>0138172021</h2>
+        BANK Mandiri<br><br>
+        <h1>Close<br></h1>
+        <h2></h2>
     </div>
 
     <div class="container">
