--- a/seting.html
+++ b/seting.html
@@ -15,11 +15,11 @@
 
         /* Latar belakang gambar dengan penyesuaian */
         .background {
-            background-image: url('https://blogger.googleusercontent.com/img/a/AVvXsEiM5eFPyOcKCfCzZeCYhHjR7SUZUXbL2NLTD3OgVqcagHYp1tc-gffNSum-gCVqgZvnnVTWUqPPZZDnJ4t8_icriA2ImHtoLgmjCvgr3f3NvdxGxzv2lfiyew8pmZtxcHPt6lM3UKk30BwWqqZ2s7ankhU5RpCNO63QCBg3qYRF8TqxwJ_3FNIARQKbZ7TT'); /* Ganti URL ini dengan gambar latar belakang Anda */
+            background-image: url('https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729933716542.jpg'); /* Ganti URL ini dengan gambar latar belakang Anda */
             background-size: cover;
             background-position: center;
             position: relative;
-            height: 100%;
+            height: 105%;
         }
 
         /* Gaya untuk navigasi di bagian bawah */
