--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <!-- Popup pertama -->
     <div id="popup1">
-        <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhCuPN9D05lmMXW7eQD2QBeMf38lm_ZgCDYIgyr43yGkx_3ZKgm_wp_gFeMmm0oQWxk7GrGoYt-vN210oX5KtivYIH9h6VOYUbjBDUoBJzgOJDh4EZQ2IVBi0v9S16jKKX7rGF4RMr50NvjGdzXfymKzQTpKq1zfenq7xTOc_yiHYHfWNFvN5GQ2SGN6p_9" alt="Popup Image 1">
+        <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1730010513673-removebg-preview.png" alt="Popup Image 1">
     </div>
 
     <script>
