--- a/akun.html
+++ b/akun.html
@@ -118,6 +118,10 @@ body {
       object-fit: cover;
       margin-bottom: 0px;
     }
+    p {
+      font-size: 13px;
+      color:#000;
+    }
 
 </style>
 <body>
@@ -130,7 +134,7 @@ body {
                 <img src="https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729931263416-removebg-preview.png" alt="Dana Amanah Logo">
             </div>
             <div class="phone-number">
-                <p>SRI WAHONO</p>
+                <p>MUHAMMAD HAIKAL RAFDI</p>
             </div>
         </div>
 
