--- a/bank.html
+++ b/bank.html
@@ -34,13 +34,13 @@
         .green-box {
             background-color: #66CDAA;
             color: white;
-            padding: 20px;
-            font-size: 24px;
+            padding: 10px;
+            font-size: 20px;
             font-weight: bold;
             text-align: left;
             border-radius:15px;
-            padding-left: 40px;
-            margin-top: 60px; /* Memberi ruang agar tombol <Back di atas */
+            padding-left: 30px;
+            margin-top: 40px; /* Memberi ruang agar tombol <Back di atas */
         }
 
         .container {
@@ -59,14 +59,14 @@
 <body>
 
     <!-- Tombol Kembali -->
-    <a href="halaman-lain.html" class="back-button">
+    <a href="akun.html" class="back-button">
         &lt;<span>Back</span>
     </a>
 
     
     <div class="green-box">
-        BANK Mandiri<br><br>
-        <h1>Close<br></h1>
+        Bank Mandiri<br><br>
+        <h1><br></h1>
         <h2></h2>
     </div>
 
