--- a/tentang.html
+++ b/tentang.html
@@ -23,7 +23,7 @@
         .button {
             display: inline-block;
             padding: 13px 115px; /* Lebar padding disesuaikan */
-            background-color: #ffa500;
+            background-color: #66cdaa;
             color: #fff;
             border: none;
             border-radius: 15px;
