--- a/seting.html
+++ b/seting.html
@@ -15,7 +15,7 @@
 
         /* Latar belakang gambar dengan penyesuaian */
         .background {
-            background-image: url('https://raw.githubusercontent.com/Dan4credit/Dan4credit.github.io/refs/heads/main/1729933716542.jpg'); /* Ganti URL ini dengan gambar latar belakang Anda */
+            background-image: url('https://blogger.googleusercontent.com/img/a/AVvXsEj-xqOPB-07btD-eps2keAnzwhSX3fRm94VGINv5UZIC1GuQQg-Wv3_xf5Co16LMQaccHAQ0ztYvhEwR041HxbkR6Eer7kifhBvLfmWqHhBtNfRB1LqX6OpurIUjkZuPiixiej2lLa3w1SbRsU-OsLbQFANzCys13JzX77lYA--RqZe6o19Su590WAub0BW'); /* Ganti URL ini dengan gambar latar belakang Anda */
             background-size: cover;
             background-position: center;
             position: relative;
