--- a/puki.html
+++ b/puki.html
@@ -66,7 +66,7 @@
                 <div></div>
             </a>
             <!-- Link 2 dengan ikon di tengah ke pinjam.html -->
-            <a href="pinjaman.html">
+            <a href="pinjaman111.html">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhtxk5WkMENaj3Tq1mGRK8xqQsq6REv1MWFIK5GSL-W-d0NngCGvDXGrv1LKI-FQIqA9oX5kA4DiHtwaToO-mNBBvfNUU4rJFJVXcSI5EtBrtiGISfSSSeuFzG4qRU5kAjoQXBaFMPjLi0eLxE3P9qArV509j7QJXHjIKZc4GQeVnK59H0IwvChUQt_ACda" alt="Pinjam Icon"/>
                 <div></div>
             </a>
