--- a/metode1.html
+++ b/metode1.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   
-        <a href="pinjaman.html" class="back-button">
+        <a href="pinjaman111.html" class="back-button">
         &lt;<span>Back</span>
     </a><br>
 
