--- a/bank.html
+++ b/bank.html
@@ -65,7 +65,7 @@
 
     
     <div class="green-box">
-        Bank Mandiri<br><br>
+        Bank BCA<br><br>
         <h1><br></h1>
         <h2></h2>
     </div>
