--- a/akun.html
+++ b/akun.html
@@ -171,7 +171,7 @@ body {
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhJTi4tF25WyKywVda2R2c8cQMP--V4QPrfzXncEwh1PbgiYeqnT7G-8LKLzvtz6RPpCSQbda5uqo3Ln5OUXH1qGrbvOk1DXjIdQXkZCaSDByzqpGIO-lRR4masGxPGXuq0ks22b1BfNLPycocFDjy1NIiPm4iO8vfBzplfBPZ5r5J3UqgGnTKhYTaYNGj0" alt="Rek Icon"/>
             </a>
             <!-- Link 2 dengan ikon di tengah -->
-            <a href="pinjaman.html">
+            <a href="pinjaman111.html">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhtxk5WkMENaj3Tq1mGRK8xqQsq6REv1MWFIK5GSL-W-d0NngCGvDXGrv1LKI-FQIqA9oX5kA4DiHtwaToO-mNBBvfNUU4rJFJVXcSI5EtBrtiGISfSSSeuFzG4qRU5kAjoQXBaFMPjLi0eLxE3P9qArV509j7QJXHjIKZc4GQeVnK59H0IwvChUQt_ACda" alt="Tentang Icon"/>
             </a>
             <!-- Link 3 dengan ikon -->
